# ForestRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  ForestRenderer.sln  ImGUI.vcxproj.filters  README.md  SDLRenderer.h  imgui.ini  vcpkg.json
CMake/: fr_find_sources.cmake
Release/: ImGUI.lib
Src/: Common.h  Point.cpp  Point.h  main.cpp
Src/Algorithm/: AllocatorAlgorithm.h  AllocatorFactory.h  GrowthSimulator.cpp  GrowthSimulator.h  OptimisedAllocator.cpp  OptimisedAllocator.h  OptimisedAllocatorFactory.cpp  OptimisedAllocatorFactory.h  PerlinNoise.cpp  PerlinNoise.h  RandomAllocator.cpp  RandomAllocator.h  RandomAllocatorFactory.cpp  RandomAllocatorFactory.h  Rule.cpp  Rule.h  SpeciesTable.cpp  SpeciesTable.h  Terrain.cpp  Terrain.h  Tree.cpp  Tree.h
Src/App/: window.cpp  window.h
Src/Render/: Engine.cpp  Engine.h  GUI.cpp  GUI.h  Renderer.h  SDLEngine.h  SDLRenderer.cpp  SDLRenderer.h
Src/Utils/: Heightmap.cpp  Heightmap.h  Loader.cpp  Loader.h  Timer.cpp  Timer.h
